syntax = "proto3";

option go_package = "./proto/pb";

package proto;

message AsyncCallRequest {
  int64   id = 1;
  string  source = 2;
  string  target = 3;
  string  source_host = 4;
  string  target_host = 5;
  int32   seq = 6;
  string  callback = 7;
  bytes   msg = 8;
}

message AsyncCallResponse {
  int64  id = 1;
  bool   ok = 2;
}

message InitSyncCallRequest {
  string target = 1;
  bytes  msg = 2;
}

message InitSyncCallResponse {
  bool   ok = 1;
  int64  id = 2;
}

message SyncCallRequest {
  int64  id = 1;
}

message SyncCallResponse {
  bool   ok = 1;
  bytes  msg = 2;
}

message InitCheckpointRequest {
  string source = 1;
  string source_host = 2;
  string target = 3;
  string target_host = 4;
}

message InitCheckpointResponse {
  int64 id = 1;
  bool  ok = 2;
}

message WaitCheckpointRequest {
  int64 id = 1;
}

message WaitCheckpointResponse {
  bool ok = 1;
}

message SendBarrierRequest {
  int64  id = 1;
  string source = 2;
  string target = 3;
}

message SendBarrierResponse {
  bool ok = 1;
}

service RpcProxy {
  rpc AsyncCall (AsyncCallRequest) returns (AsyncCallResponse) {}
  rpc InitSyncCall (InitSyncCallRequest) returns (InitSyncCallResponse) {}
  rpc SyncCall (SyncCallRequest) returns (SyncCallResponse) {}
  rpc InitCheckpoint (InitCheckpointRequest) returns (InitCheckpointResponse) {}
  rpc WaitCheckpoint (WaitCheckpointRequest) returns (WaitCheckpointResponse) {}
  rpc SendBarrier (SendBarrierRequest) returns (SendBarrierResponse) {}
}